# monoglu

./: .gitignore  Cargo.toml  README.md  build.bat  debug.bat  index.html  sw.js
app/: Cargo.toml
app/monoglu-webapp/: Cargo.toml  Trunk.toml  index.html
app/monoglu-webapp/src/: lib.rs  main.rs
app/monoglu-webapp/src/components/: mod.rs  navbar.rs  searchbar.rs  state.rs
app/monoglu-webapp/src/pages/: home.rs
docs/: index.html  monoglu.js  monoglu_bg.wasm  sw.js
egui/: Cargo.toml  Trunk.toml  index.html
egui/src/: event.rs  lib.rs
monoglu/: Cargo.toml
monoglu-auth/: Cargo.toml  Config.toml
monoglu-auth/benches/: file_io.rs
monoglu-auth/src/: auth.rs  lib.rs  main.rs
monoglu-core/: Cargo.toml  index.html
monoglu-core/benches/: file_io.rs
monoglu-core/src/: _fetch.rs  auth.rs  config.rs  error.rs  fetch.rs  lib.rs  log.rs  main.rs  state.rs  storage.rs
monoglu-core/src/metric/: mod.rs
monoglu-core/src/web/: mod.rs  storage.rs  window.rs
monoglu-gateway/: Cargo.toml
monoglu-gateway/src/: main.rs
monoglu-menu/: Cargo.toml
monoglu-menu/src/: lib.rs
monoglu-platter/: Cargo.toml  README.md
monoglu-platter/src/: configuration.rs  event.rs  lib.rs
monoglu-platter/src/data/: configuration.rs  mod.rs
monoglu-platter/src/database/: influx.rs  mod.rs
monoglu-queue/: Cargo.toml
monoglu-raft/: Cargo.toml
monoglu-server/: Cargo.toml
monoglu-server/src/: lib.rs  main.rs
monoglu-server/src/auth/: mod.rs
monoglu-storage/: Cargo.toml
monoglu-storage/src/: main.rs
monoglu-testserver/: Cargo.toml
monoglu-testserver/src/: crypto.rs  lib.rs  main.rs
monoglu-testserver/src/config/: mod.rs  server.rs  tls.rs
monoglu-testserver/src/data/: mod.rs  user_info.rs
monoglu-testserver/static/media/: index.html
monoglu-testserver/static/media/js/: main.js
monoglu-util/: Cargo.toml
monoglu-util/src/: lib.rs
monoglu-util/src/metric/: mod.rs
monoglu-webapp/: Cargo.toml  Trunk.toml  index.html
monoglu-webapp/src/: cell.rs  context_manager.rs  events.rs  gridlayout.rs  lib.rs  main.rs  state.rs  web_api.rs
monoglu-webapp/src/apps/: chat.rs  login.rs  mod.rs
monoglu-webapp/src/components/: file_upload.rs  mod.rs  tabs.rs
monoglu-webapp/src/data/: dashboard.rs  mod.rs  test.rs
monoglu-webapp/src/dialogs/: chat.rs  ex1.rs  ex2.rs  graph1.rs  mod.rs
monoglu-webapp/src/features/: mod.rs  router.rs
monoglu-webapp/src/monoglu_features/: button.rs  fonts.rs  mod.rs  selectable_label.rs  text_style.rs
monoglu-webapp/src/pages/: developer.rs  login.rs  mod.rs  user.rs
monoglu-webapp/src/tabs/: company_info.rs  dashboard.rs  etc.rs  etc1.rs  etc2.rs  exception.rs  home.rs  info.rs  login.rs  mod.rs  plants.rs  servers.rs  tech_info.rs  test1.rs  test2.rs  user.rs
monoglu-webapp/src/web/: data.rs  http.rs  mod.rs  storage.rs
monoglu-worker/: Cargo.toml
monoglu-worker/src/: config.rs  errors.rs  lib.rs  main.rs
monoglu/src/: lib.rs  message.rs
monoglu/src/app/: app.rs
monoglu/src/controller/: mod.rs
monoglu/src/data/: distance.rs  gyro.rs  mod.rs
platter/: Cargo.toml
server/: Cargo.toml
src/: app.rs  context_manager.rs  event.rs  lib.rs  main.rs  route.rs  state.rs
src/app/: application.rs  mod.rs  state.rs  worker.rs
src/app/component/: mod.rs  navigation_bar.rs  status_bar.rs
src/app/page/: mod.rs  test.rs
src/component/: mod.rs  nav.rs  status_bar.rs  test.rs  test1.rs  test2.rs
src/components/: mod.rs  navigation_bars.rs  prod.rs  sub.rs  tabs.rs
src/pages/: test.rs
yew-template/: Cargo.toml
yew-template/src/: context_manager.rs  events.rs
yew-template/src/components/: auth.rs  navigation_bars.rs
