[package]
name = "monoglu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
console_error_panic_hook = "0.1.6"
eframe = { version = "0.18.0", features = ["persistence"] }
egui = "0.18.0"
log = "0.4.6"
serde = { version = "1", features = ["derive"] }
tracing-wasm = "0.2"
wasm-logger = "0.2.0"