[package]
name = "monoglu-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13.2"
oauth2 = "4.2"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "file_io"
harness = false