[package]
name = "monoglu-platter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
toml = "0.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }