[package]
name = "monoglu-util"
version = "0.1.0"
authors = ["Donghoon Lee <zombiedelah@gmail.com>", "Yonggon Yun<y2gon2@gmail.com>"]
edition = "2021"
repository = "https://github.com/kanet1105/monoglu"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[lib]
crate-type = ["rlib"]

[dependencies]
mio = "0.8"