[package]
name = "monoglu-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Yew
yew = "0.19.3"
yew-router = "0.16"

# Non-Yew
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2"
web-sys = { version = "0.3.59", features = [
    "console",
    "Performance",
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response",
    "Storage",
    "Window",
] }