[package]
name = "monoglu-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
js-sys = "0.3.59"
log = "0.4"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2"
yew = "0.19.3"
yew-router = "0.16"