[package]
name = "monoglu-platter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }