[package]
name = "monoglu-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
oauth2 = "4"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"